--- a/DBReview/2. Apex PROD.ipynb
+++ b/DBReview/2. Apex PROD.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apex - PROD"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -145,37 +152,49 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mTableName                 \u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m TableSizeBytes\u001b[0m\u001b[32;1m TableSizeMB\u001b[0m\u001b[32;1m TableStatus\u001b[0m\n",
-      "\u001b[32;1m---------                 \u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m--------------\u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m-----------\u001b[0m\n",
-      "prod-accommodation         10/20/2023 1:11:55 PM    151530       29060289 28 MB       ACTIVE\n",
-      "prod-apex_product_extras   2/2/2023 4:43:28 PM     5071428     1041059031 993 MB      ACTIVE\n",
-      "prod-apex_translations     5/16/2024 10:06:42 AM      7743         735797 1 MB        ACTIVE\n",
-      "prod-availability          10/20/2023 1:11:55 PM   3882740     2743664869 2617 MB     ACTIVE\n",
-      "prod-bookability           10/20/2023 1:11:55 PM 117111222    32523228285 31017 MB    ACTIVE\n",
-      "prod-novasol_currencies    2/2/2023 4:43:28 PM          38            498 0 MB        ACTIVE\n",
-      "prod-novasol_product_cache 10/20/2023 1:11:55 PM    213274      203057925 194 MB      ACTIVE\n",
-      "terraform-locks            7/8/2022 6:20:39 PM          89          12684 0 MB        ACTIVE\n",
+      "\u001b[32;1mTableName                 \u001b[0m\u001b[32;1m TableBackup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m TableSizeMB\u001b[0m\u001b[32;1m TableStatus\u001b[0m\n",
+      "\u001b[32;1m---------                 \u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m-----------\u001b[0m\n",
+      "prod-accommodation               False 10/20/2023 1:11:55 PM    151547 28 MB       ACTIVE\n",
+      "prod-apex_product_extras         False 2/2/2023 4:43:28 PM     5071428 993 MB      ACTIVE\n",
+      "prod-apex_translations           False 5/16/2024 10:06:42 AM      7743 1 MB        ACTIVE\n",
+      "prod-availability                False 10/20/2023 1:11:55 PM   3883867 2617 MB     ACTIVE\n",
+      "prod-bookability                 False 10/20/2023 1:11:55 PM 117145542 31130 MB    ACTIVE\n",
+      "prod-novasol_currencies          False 2/2/2023 4:43:28 PM          38 0 MB        ACTIVE\n",
+      "prod-novasol_product_cache       False 10/20/2023 1:11:55 PM    213318 194 MB      ACTIVE\n",
+      "terraform-locks                   True 7/8/2022 6:20:39 PM          89 0 MB        ACTIVE\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "$ddbTableList = Get-DDBTableList -ProfileName DevOps-Apex-PROD\n",
+    "$ddbBackupList  = Get-DDBBackupList -ProfileName $Profiles.ProfileName\n",
+    "$ddbTableList   = Get-DDBTableList -ProfileName $Profiles.ProfileName\n",
     "\n",
     "$ddbTables  = @()\n",
     "foreach ($ddbTable in $ddbTableList) {\n",
     "    \n",
-    "    $Table = Get-DDBTable -TableName $ddbTable -ProfileName DevOps-Apex-PROD\n",
+    "    $Table = Get-DDBTable -TableName $ddbTable -ProfileName $Profiles.ProfileName\n",
+    "\n",
+    "    if ($ddbBackupList) {\n",
+    "        \n",
+    "        $BackupAvailable = $ddbBackupList.TableName.Contains(\"$($Table.TableName)\")\n",
+    "    }\n",
+    "    else {\n",
+    "\n",
+    "        $BackupAvailable = $false\n",
+    "    }\n",
+    "    \n",
     "\n",
     "    $Sum = [PSCustomObject]@{\n",
     "\n",
     "        TableName           = $Table.TableName\n",
+    "        TableBackup         = $BackupAvailable\n",
     "        CreationDateTime    = $Table.CreationDateTime\n",
     "        ItemCount           = $Table.ItemCount\n",
-    "        TableSizeBytes      = $Table.TableSizeBytes\n",
+    "        # TableSizeBytes      = $Table.TableSizeBytes\n",
     "        TableSizeMB         = \"$([math]::round($($Table.TableSizeBytes /1MB), 0)) MB\"\n",
     "        TableStatus         = $Table.TableStatus\n",
-    "        #TableId             = $Table.TableId\n",
+    "        # TableId             = $Table.TableId\n",
     "        # KeySchema           = $Table.KeySchema\n",
     "        # GlobalSecondaryIndexes = $Table.GlobalSecondaryIndexes\n",
     "        \n",
@@ -183,6 +202,25 @@
     "    $ddbTables += $Sum\n",
     "}\n",
     "$ddbTables | Format-Table -AutoSize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,32): error CS1002: ; expected\n(1,32): error CS1056: Unexpected character '$'",
+     "output_type": "error",
+     "traceback": [
+      "(1,32): error CS1002: ; expected\n",
+      "(1,32): error CS1056: Unexpected character '$'"
+     ]
+    }
+   ],
+   "source": [
+    "Get-DDBBackupList -ProfileName $Profiles.ProfileName | Format-Table -AutoSize"
    ]
   }
  ],
