Tested and working

--- a/DBReview/2. Apex PROD.ipynb
+++ b/DBReview/2. Apex PROD.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -36,19 +36,7 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mAccount  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
-      "\u001b[32;1m-------  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
-      "Apex-PROD 463854377715 eu-west-2            0              8\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "$RegexGroup             = 'AccountNumber'\n",
     "$RegexGroupAccountName  = 'AccountName'\n",
@@ -137,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -146,26 +134,7 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32;1mTableName                 \u001b[0m\u001b[32;1m TableBackup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m TableSizeMB\u001b[0m\u001b[32;1m TableStatus\u001b[0m\n",
-      "\u001b[32;1m---------                 \u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m-----------\u001b[0m\n",
-      "prod-accommodation               False 10/20/2023 1:11:55 PM    151547 28 MB       ACTIVE\n",
-      "prod-apex_product_extras         False 2/2/2023 4:43:28 PM     5071428 993 MB      ACTIVE\n",
-      "prod-apex_translations           False 5/16/2024 10:06:42 AM      7743 1 MB        ACTIVE\n",
-      "prod-availability                False 10/20/2023 1:11:55 PM   3883867 2617 MB     ACTIVE\n",
-      "prod-bookability                 False 10/20/2023 1:11:55 PM 117145542 31130 MB    ACTIVE\n",
-      "prod-novasol_currencies          False 2/2/2023 4:43:28 PM          38 0 MB        ACTIVE\n",
-      "prod-novasol_product_cache       False 10/20/2023 1:11:55 PM    213318 194 MB      ACTIVE\n",
-      "terraform-locks                   True 7/8/2022 6:20:39 PM          89 0 MB        ACTIVE\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "$ddbBackupList  = Get-DDBBackupList -ProfileName $Profiles.ProfileName\n",
     "$ddbTableList   = Get-DDBTableList -ProfileName $Profiles.ProfileName\n",
@@ -206,22 +175,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(1,32): error CS1002: ; expected\n(1,32): error CS1056: Unexpected character '$'",
-     "output_type": "error",
-     "traceback": [
-      "(1,32): error CS1002: ; expected\n",
-      "(1,32): error CS1056: Unexpected character '$'"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "Get-DDBBackupList -ProfileName $Profiles.ProfileName | Format-Table -AutoSize"
+    "Get-DDBBackupList -ProfileName $Profiles.ProfileName "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
