--- a/DBReview/3. Owner Services PROD.ipynb
+++ b/DBReview/3. Owner Services PROD.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apex - PROD"
+    "# Owner Services PROD"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -31,9 +31,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mAccount  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
-      "\u001b[32;1m-------  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
-      "Apex-PROD 463854377715 eu-west-2            0              8\n",
+      "\u001b[32;1mAccount            \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
+      "\u001b[32;1m-------            \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
+      "Owner-Services-PROD 496175963148 eu-west-2            3              1\n",
       "\n"
      ]
     }
@@ -48,7 +48,7 @@
     "$RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\"\n",
     "$RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" \n",
     "$RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Apex-PROD' }\n",
+    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Owner-Services-PROD' }\n",
     "$Regions                = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
     "\n",
     "function Get-AWSDBInformation {\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -152,16 +152,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mTableName                 \u001b[0m\u001b[32;1m TableBackup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m TableSizeMB\u001b[0m\u001b[32;1m TableStatus\u001b[0m\n",
-      "\u001b[32;1m---------                 \u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m-----------\u001b[0m\n",
-      "prod-accommodation               False 10/20/2023 1:11:55 PM    151626 28 MB       ACTIVE\n",
-      "prod-apex_product_extras         False 2/2/2023 4:43:28 PM     5071972 993 MB      ACTIVE\n",
-      "prod-apex_translations            True 5/16/2024 10:06:42 AM      7743 1 MB        ACTIVE\n",
-      "prod-availability                False 10/20/2023 1:11:55 PM   3886076 2619 MB     ACTIVE\n",
-      "prod-bookability                 False 10/20/2023 1:11:55 PM 117212328 31120 MB    ACTIVE\n",
-      "prod-novasol_currencies          False 2/2/2023 4:43:28 PM          38 0 MB        ACTIVE\n",
-      "prod-novasol_product_cache       False 10/20/2023 1:11:55 PM    213460 194 MB      ACTIVE\n",
-      "terraform-locks                   True 7/8/2022 6:20:39 PM          89 0 MB        ACTIVE\n",
+      "\u001b[32;1mTableName      \u001b[0m\u001b[32;1m TableBackup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m TableSizeMB\u001b[0m\u001b[32;1m TableStatus\u001b[0m\n",
+      "\u001b[32;1m---------      \u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m-----------\u001b[0m\n",
+      "terraform-locks       False 12/12/2022 1:05:57 PM        70 0 MB        ACTIVE\n",
       "\n"
      ]
     }
@@ -208,12 +201,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Backups"
+    "### RDS Databases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -228,53 +221,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mTableName             \u001b[0m\u001b[32;1m BackupName                    \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
-      "\u001b[32;1m---------             \u001b[0m \u001b[32;1m----------                    \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
-      "terraform-locks        terraform-locks-backup         7/11/2024 1:03:48 PM   AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP  7/12/2024 11:30:17 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP2 7/12/2024 11:36:29 AM  AVAILABLE\n",
+      "\u001b[32;1mDBInstanceIdentifier\u001b[0m\u001b[32;1m Engine  \u001b[0m\u001b[32;1m EngineVersion\u001b[0m\u001b[32;1m InstanceCreateTime  \u001b[0m\u001b[32;1m BackupRetention\u001b[0m\u001b[32;1m Snapshots\u001b[0m\n",
+      "\u001b[32;1m--------------------\u001b[0m \u001b[32;1m------  \u001b[0m \u001b[32;1m-------------\u001b[0m \u001b[32;1m------------------  \u001b[0m \u001b[32;1m---------------\u001b[0m \u001b[32;1m---------\u001b[0m\n",
+      "authenticationdbprod postgres 16.1          3/12/2024 8:57:35 AM               7        10\n",
+      "bookingdbprod        postgres 16.1          3/12/2024 9:02:23 AM               7         9\n",
+      "notificationdbprod   postgres 16.3          3/12/2024 8:57:15 AM               7        10\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "$BackupsList    = Get-DDBBackupList -ProfileName $Profiles.ProfileName \n",
-    "$Columns      = 'TableName', 'BackupName', 'BackupCreationDateTime',   'BackupStatus'#, 'BackupSizeBytes', 'BackupType' \n",
-    "$BackupsList | Select-Object -Property $Columns | Format-Table -AutoSize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "$Backup =New-DDBBackup -TableName 'prod-apex_translations' -ProfileName DevOps-Apex-PROD -BackupName 'prod-apex_translations_BACKUP2'\n",
-    "$Backup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "$Bk = Get-DDBBackup -BackupArn $Backup.BackupArn -ProfileName DevOps-Apex-PROD\n",
-    "$Bk.BackupDetails"
+    "$RDSInstances = Get-RDSDBInstance -ProfileName $Profiles.ProfileName -Region eu-west-2\n",
+    "\n",
+    "$Inst = @()\n",
+    "foreach ($Instance in $RDSInstances) {\n",
+    "    \n",
+    "    $DBInstanceArn      = $Instance.DBInstanceArn\n",
+    "    # $Tags               = Get-RDSTagForResource -ResourceName $DBInstanceArn -ProfileName $Profile.ProfileName\n",
+    "    $Snapshots          = Get-RDSDBSnapshot -ProfileName $Profiles.ProfileName -DBInstanceIdentifier $DBInstanceArn\n",
+    "    #$DBClusterSnapshots = Get-RDSDBClusterSnapshot -ProfileName $Profile.ProfileName -DBClusterIdentifier $DBInstanceArn\n",
+    "\n",
+    "    $Sum = [PSCustomObject]@{\n",
+    "\n",
+    "        #DBName                  = $Instance.DBName\n",
+    "        DBInstanceIdentifier    = $Instance.DBInstanceIdentifier\n",
+    "        Engine                  = $Instance.Engine\n",
+    "        EngineVersion           = $Instance.EngineVersion\n",
+    "        InstanceCreateTime      = $Instance.InstanceCreateTime\n",
+    "        #DBInstanceClass         = $Instance.DBInstanceClass\n",
+    "        BackupRetention         = $Instance.BackupRetentionPeriod\n",
+    "        #StorageThroughput       = $Instance.StorageThroughput\n",
+    "        #Tags                    = $Tags\n",
+    "        Snapshots               = ($Snapshots | Measure-Object).Count\n",
+    "        #DBClusterSnapshots      = ($DBClusterSnapshots | Measure-Object).Count\n",
+    "        \n",
+    "    }\n",
+    "    $Inst += $Sum\n",
+    "    \n",
+    "}\n",
+    "$Inst | Format-Table -AutoSize"
    ]
   }
  ],
