Tested and working

--- a/DBReview/3. Owner Services PROD.ipynb
+++ b/DBReview/3. Owner Services PROD.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Owner Services PROD"
+    "# Account - Owner Services PROD"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Account Summary"
+    "## Database Summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -43,19 +43,20 @@
     "Import-Module AWS.Tools.DynamoDBv2\n",
     "Import-Module AWS.Tools.RDS\n",
     "\n",
-    "$RegexGroup             = 'AccountNumber'\n",
-    "$RegexGroupAccountName  = 'AccountName'\n",
-    "$RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\"\n",
-    "$RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" \n",
-    "$RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Owner-Services-PROD' }\n",
-    "$Regions                = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
+    "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -match 'DevOps-Owner-Services-PROD' }\n",
+    "$Regions    = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
     "\n",
     "function Get-AWSDBInformation {\n",
     "    [CmdletBinding()]\n",
     "    param (\n",
+    "\n",
     "        $Profiles,\n",
-    "        $Regions\n",
+    "        $Regions,\n",
+    "        $RegexGroup             = 'AccountNumber',\n",
+    "        $RegexGroupAccountName  = 'AccountName',\n",
+    "        $RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\",\n",
+    "        $RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\", \n",
+    "        $RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
     "    )\n",
     "    \n",
     "    begin {\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -201,12 +202,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RDS Databases"
+    "### RDS Instances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -234,11 +235,13 @@
     "$RDSInstances = Get-RDSDBInstance -ProfileName $Profiles.ProfileName -Region eu-west-2\n",
     "\n",
     "$Inst = @()\n",
+    "$Snap = @()\n",
+    "$Snapshots = @()\n",
     "foreach ($Instance in $RDSInstances) {\n",
     "    \n",
     "    $DBInstanceArn      = $Instance.DBInstanceArn\n",
     "    # $Tags               = Get-RDSTagForResource -ResourceName $DBInstanceArn -ProfileName $Profile.ProfileName\n",
-    "    $Snapshots          = Get-RDSDBSnapshot -ProfileName $Profiles.ProfileName -DBInstanceIdentifier $DBInstanceArn\n",
+    "    $Shots          = Get-RDSDBSnapshot -ProfileName $Profiles.ProfileName -DBInstanceIdentifier $DBInstanceArn\n",
     "    #$DBClusterSnapshots = Get-RDSDBClusterSnapshot -ProfileName $Profile.ProfileName -DBClusterIdentifier $DBInstanceArn\n",
     "\n",
     "    $Sum = [PSCustomObject]@{\n",
@@ -252,14 +255,174 @@
     "        BackupRetention         = $Instance.BackupRetentionPeriod\n",
     "        #StorageThroughput       = $Instance.StorageThroughput\n",
     "        #Tags                    = $Tags\n",
-    "        Snapshots               = ($Snapshots | Measure-Object).Count\n",
+    "        Snapshots               = ($Shots | Measure-Object).Count\n",
     "        #DBClusterSnapshots      = ($DBClusterSnapshots | Measure-Object).Count\n",
     "        \n",
     "    }\n",
     "    $Inst += $Sum\n",
+    "    $Snapshots += $Shots\n",
     "    \n",
     "}\n",
+    "\n",
+    "$Snapshots | ForEach-Object {\n",
+    "\n",
+    "    $Sum = [PSCustomObject]@{\n",
+    "\n",
+    "        DBInstanceIdentifier    = $_.DBInstanceIdentifier\n",
+    "        DBSnapshotIdentifier    = $_.DBSnapshotIdentifier\n",
+    "        SnapshotCreateTime      = $_.SnapshotCreateTime\n",
+    "        Engine                  = $_.Engine\n",
+    "        SnapshotType            = $_.SnapshotType\n",
+    "        Status                  = $_.Status\n",
+    "        \n",
+    "    }\n",
+    "    $Snap += $Sum\n",
+    "}\n",
     "$Inst | Format-Table -AutoSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Snapshots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### authenticationdbprod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mDBSnapshotIdentifier                     \u001b[0m\u001b[32;1m SnapshotCreateTime  \u001b[0m\u001b[32;1m SnapshotType\u001b[0m\u001b[32;1m Status\u001b[0m\n",
+      "\u001b[32;1m--------------------                     \u001b[0m \u001b[32;1m------------------  \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m------\u001b[0m\n",
+      "rds:authenticationdbprod-2024-07-12-02-57 7/12/2024 3:57:18 AM automated    available\n",
+      "rds:authenticationdbprod-2024-07-11-02-56 7/11/2024 3:56:46 AM automated    available\n",
+      "rds:authenticationdbprod-2024-07-10-02-56 7/10/2024 3:56:55 AM automated    available\n",
+      "rds:authenticationdbprod-2024-07-09-02-56 7/9/2024 3:56:51 AM  automated    available\n",
+      "rds:authenticationdbprod-2024-07-08-02-56 7/8/2024 3:56:40 AM  automated    available\n",
+      "rds:authenticationdbprod-2024-07-07-02-56 7/7/2024 3:56:51 AM  automated    available\n",
+      "rds:authenticationdbprod-2024-07-06-02-56 7/6/2024 3:56:41 AM  automated    available\n",
+      "rds:authenticationdbprod-2024-07-05-02-56 7/5/2024 3:56:40 AM  automated    available\n",
+      "rds:authenticationdbprod-2024-07-04-02-56 7/4/2024 3:56:27 AM  automated    available\n",
+      "authenticationdbprod-snapshot             3/12/2024 8:27:02 AM manual       available\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "$DB = 'authenticationdbprod'\n",
+    "$Snap | Where-Object {$_.DBInstanceIdentifier -eq $DB} | Select-Object DBSnapshotIdentifier, SnapshotCreateTime, SnapshotType, Status |\n",
+    "Sort-Object SnapshotCreateTime -Descending  |Format-Table -AutoSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### bookingdbprod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mDBSnapshotIdentifier              \u001b[0m\u001b[32;1m SnapshotCreateTime  \u001b[0m\u001b[32;1m SnapshotType\u001b[0m\u001b[32;1m Status\u001b[0m\n",
+      "\u001b[32;1m--------------------              \u001b[0m \u001b[32;1m------------------  \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m------\u001b[0m\n",
+      "rds:bookingdbprod-2024-07-12-04-56 7/12/2024 5:56:45 AM automated    available\n",
+      "rds:bookingdbprod-2024-07-11-04-56 7/11/2024 5:56:58 AM automated    available\n",
+      "rds:bookingdbprod-2024-07-10-04-56 7/10/2024 5:56:56 AM automated    available\n",
+      "rds:bookingdbprod-2024-07-09-04-56 7/9/2024 5:56:49 AM  automated    available\n",
+      "rds:bookingdbprod-2024-07-08-04-56 7/8/2024 5:56:57 AM  automated    available\n",
+      "rds:bookingdbprod-2024-07-07-04-56 7/7/2024 5:56:59 AM  automated    available\n",
+      "rds:bookingdbprod-2024-07-06-04-56 7/6/2024 5:56:30 AM  automated    available\n",
+      "rds:bookingdbprod-2024-07-05-04-57 7/5/2024 5:57:14 AM  automated    available\n",
+      "bookingdbprod-snapshot             3/12/2024 8:38:57 AM manual       available\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "$DB = 'bookingdbprod'\n",
+    "$Snap | Where-Object {$_.DBInstanceIdentifier -eq $DB} | Select-Object DBSnapshotIdentifier, SnapshotCreateTime, SnapshotType, Status |\n",
+    "Sort-Object SnapshotCreateTime -Descending  |Format-Table -AutoSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### notificationdbprod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mDBSnapshotIdentifier                   \u001b[0m\u001b[32;1m SnapshotCreateTime  \u001b[0m\u001b[32;1m SnapshotType\u001b[0m\u001b[32;1m Status\u001b[0m\n",
+      "\u001b[32;1m--------------------                   \u001b[0m \u001b[32;1m------------------  \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m------\u001b[0m\n",
+      "rds:notificationdbprod-2024-07-12-00-20 7/12/2024 1:20:25 AM automated    available\n",
+      "rds:notificationdbprod-2024-07-11-00-20 7/11/2024 1:20:29 AM automated    available\n",
+      "rds:notificationdbprod-2024-07-10-00-20 7/10/2024 1:20:46 AM automated    available\n",
+      "rds:notificationdbprod-2024-07-09-00-20 7/9/2024 1:20:43 AM  automated    available\n",
+      "rds:notificationdbprod-2024-07-08-00-21 7/8/2024 1:21:16 AM  automated    available\n",
+      "rds:notificationdbprod-2024-07-07-00-20 7/7/2024 1:20:33 AM  automated    available\n",
+      "rds:notificationdbprod-2024-07-06-00-20 7/6/2024 1:20:23 AM  automated    available\n",
+      "rds:notificationdbprod-2024-07-05-00-20 7/5/2024 1:20:51 AM  automated    available\n",
+      "rds:notificationdbprod-2024-07-04-00-20 7/4/2024 1:20:16 AM  automated    available\n",
+      "notificationdbprod-snapshot             3/12/2024 8:39:20 AM manual       available\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "$DB = 'notificationdbprod'\n",
+    "$Snap | Where-Object {$_.DBInstanceIdentifier -eq $DB} | Select-Object DBSnapshotIdentifier, SnapshotCreateTime, SnapshotType, Status |\n",
+    "Sort-Object SnapshotCreateTime -Descending  |Format-Table -AutoSize"
    ]
   }
  ],
