--- a/DBReview/1. Summary.ipynb
+++ b/DBReview/1. Summary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -18,25 +18,52 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mProfileName                     \u001b[0m\u001b[32;1m StoreTypeName        \u001b[0m\u001b[32;1m ProfileLocation\u001b[0m\n",
+      "\u001b[32;1m-----------                     \u001b[0m \u001b[32;1m-------------        \u001b[0m \u001b[32;1m---------------\u001b[0m\n",
+      "DevOps-Apex-PROD                 SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-Owner-DK-Prod             SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-Owner-Services-PROD       SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-AVR-Guest-Experience-PROD SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-AVR-Guest-Payments-PROD   SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-AGE-Checkout-PROD         SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-AVR-PostBook-PROD         SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-AVR-Pricing-PROD          SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-Novosol-Awaze-PROD        SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-Novosol-Core-PROD         SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-Novosol-PROD              SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-OCMA-PROD                 SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-OneConnect-PROD           SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "DevOps-VRUK-OwnersPortal-PROD    SharedCredentialsFile /Users/conrad.gauntlett/.aws/credentials\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "Import-Module AWS.Tools.Common\n",
     "Import-Module AWS.Tools.DynamoDBv2\n",
     "Import-Module AWS.Tools.RDS\n",
     "\n",
-    "$RegexGroup             = 'AccountNumber'\n",
-    "$RegexGroupAccountName  = 'AccountName'\n",
-    "$RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\"\n",
-    "$RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" \n",
-    "$RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
-    "$Profiles               = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -like 'DevOps*' }\n",
+    "\n",
+    "$Profiles   = Get-AWSCredentials -ListProfileDetail | Where-Object { $_.ProfileName -like 'DevOps*' }\n",
     "$Profiles\n",
     "\n",
     "function Get-AWSDBInformation {\n",
     "    [CmdletBinding()]\n",
     "    param (\n",
+    "\n",
     "        $Profiles,\n",
-    "        $Regions\n",
+    "        $Regions,\n",
+    "        $RegexGroup             = 'AccountNumber',\n",
+    "        $RegexGroupAccountName  = 'AccountName',\n",
+    "        $RegexAccountNumber     = \"(?<$RegexGroup>\\d+):db.+$\",\n",
+    "        $RegexAccountNumberDDb  = \"(?<$RegexGroup>\\d+):table.+$\" ,\n",
+    "        $RegexAccountName       = \"(?<PreFix>DevOps-)(?<$RegexGroupAccountName>.+)\"\n",
     "    )\n",
     "    \n",
     "    begin {\n",
@@ -108,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -117,10 +144,35 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mAccount                  \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region      \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\n",
+      "\u001b[32;1m-------                  \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------      \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m\n",
+      "Apex-PROD                 463854377715 eu-west-2               0              8\n",
+      "Owner-DK-Prod             619122104288 eu-west-2               0              1\n",
+      "Owner-Services-PROD       496175963148 eu-west-2               3              1\n",
+      "AVR-Guest-Experience-PROD 957578851978 eu-west-2               1              2\n",
+      "AVR-Guest-Payments-PROD   461191266857 eu-central-1            0              1\n",
+      "AVR-Guest-Payments-PROD   461191266857 eu-west-2               0              5\n",
+      "AGE-Checkout-PROD         004796833142 eu-west-2               0              3\n",
+      "AVR-PostBook-PROD         125329075900 eu-west-2               0              2\n",
+      "AVR-Pricing-PROD          771654826489 eu-west-2               6              3\n",
+      "Novosol-Awaze-PROD        997644474777 eu-central-1            0              1\n",
+      "Novosol-Core-PROD         579597753614 eu-west-2               0              1\n",
+      "Novosol-PROD              035637376366 eu-central-1            4              1\n",
+      "Novosol-PROD              035637376366 eu-west-2               1              0\n",
+      "OCMA-PROD                 094848768475 eu-west-2               0              1\n",
+      "OneConnect-PROD           822029231144 eu-west-2               0              7\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "$Regions    = \"eu-central-1\" , \"eu-west-2\" , \"eu-west-1\", \"us-east-1\"\n",
-    "\n",
     "$Summary    = Get-AWSDBInformation $Profiles $Regions\n",
     "$Summary    | Format-Table -AutoSize\n",
     "# $Summary    | export-csv -Path '/Users/conrad.gauntlett/WorkArea/Temp/AWSDBInformation.csv' -NoTypeInformation -Force"
